--- a/.prettierrc
+++ b/.prettierrc
@@ -4,6 +4,5 @@
     "semi": true,
     "singleQuote": true,
     "trailingComma": "all",
-    "bracketSpacing": true,
-    "jsxBracketSameLine": false
+    "bracketSpacing": true
 }
